the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: the-project-claim
      containers:
        - name: todo-app
          image: twodogwalker/todo-app:0.30
          volumeMounts:
          - name: shared-image
            mountPath: /usr/app/static/sharedfiles
        - name: todo-app-backend
          image: twodogwalker/todo-app-backend:0.11
