the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      nodePort: 30080
      port: 1234
      protocol: TCP
      targetPort: 3000
