the_project/manifests/service_todo.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-service
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
