the_project/manifests/service_todo_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
