the_project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-service
                port:
                  number: 2345
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend-service
                port:
                  number: 2346
